...

class AddScreen extends Component {
  static navigationOptions = ({ navigation }) => {
    const prevScreen = navigation.getParam('prevScreen');
    
    return {
      tabBarTestID: prevScreen === 'RestaurantsCount' ? 'editRestaurant' : 'addTab',
      tabBarLabel: '',
      title: prevScreen === 'RestaurantsCount' ? 'Edit your restaurant' : 'Add new Restaurant',
      headerStyle: {
        backgroundColor: '#009165',
      },
    };
...
  };

  render() {
    const { restaurant, dialog, navigation } = this.props;

    return (
      <SafeAreaView testID="addScreen" style={styles.container}>
        <ErrorDialog
          errMessage={dialog.error}
          errFlag={dialog.errorFlag}
          onClose={this.handleClose}
        />
        <NewRestaurantForm
...
