...
import { closeErrDialog } from '../actions/dialog';
import ErrorDialog from '../components/ErrorDialog';
import ReviewModal from '../components/ReviewModal';

class ReviewScreen extends React.Component {
  static navigationOptions = {
    tabBarTestID: 'reviewTab',
  };

  state = {
    currentUser: {},
    btnOpen: false,
    modalVisible: false,
...
