...
  },
});

class HomeScreen extends Component {
  static navigationOptions = {
    title: 'HalalApp',
    tabBarTestID: 'homeTab',
    headerStyle: {
      backgroundColor: '#009165',
    },
  };

  state = {
...
    const {
      askPassword, password, passwordRepeat, comparePassword, user,
    } = this.state;

    
    return (
      <View testID="homeScreen" style={styles.container}>
        <NavigationEvents onDidFocus={() => this.onScreenLoad()} />
        <ListFilter handleStatus={this.handleStatus} />
        <RestaurantList data={list.filteredData} pressItem={this.handleItem} />
        <ErrorDialog
          errMessage={dialog.error}
          errFlag={dialog.errorFlag}
...
